--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite --mode development",
+    "build": "tsc && vite build --mode production",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "update-types": "npx supabase gen types typescript --project-id \"tbqmadkgieooxekluvtc\" --schema public > src/utils/database/types.ts"
@@ -19,6 +19,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.43.4",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
