--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
