--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@supabase/supabase-js": "^2.43.4",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.2.10",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
@@ -34,6 +36,8 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
+    "@types/jszip": "^3.4.1",
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
