--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@reduxjs/toolkit": "^2.5.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.43.4",
+    "@types/react-redux": "^7.1.34",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
@@ -33,6 +35,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
